fix(hitl) overflow issues

--- a/modules/hitl/assets/default.css
+++ b/modules/hitl/assets/default.css
@@ -2,7 +2,7 @@
   --conversation-header-height: 50px;
   --sidebar-header-height: 50px;
   --statusbar-height: 28px;
-  --composer-height: 75px;
+  --composer-height: 85px;
 
   --sidebar-header: #1b232c;
   --sidebar: #222a33;
@@ -24,7 +24,8 @@
 }
 
 .bph-composer {
-  border-top: solid 1px #cfcfcf;
+  border-top: none;
+  height: 75px;
 }
 
 .bph-composer:focus {
@@ -42,7 +43,6 @@
   background-color: #f9f9f9;
   line-height: 1.2;
   padding: 0.75rem 1rem;
-  margin-bottom: 0.5rem;
 }
 
 .bph-profile {
@@ -158,7 +158,6 @@
 .bph-conversation {
   background-color: #ebecf1;
   border-top-right-radius: 5px;
-  height: calc(100vh - 100px);
 }
 
 .bph-conversation-header {
@@ -183,7 +182,7 @@
 }
 
 .bph-conversation-messages {
-  height: calc(100vh - var(--conversation-header-height) - var(--composer-height) - var(--statusbar-height) - 10px);
+  height: calc(100vh - var(--conversation-header-height) - var(--composer-height) - var(--statusbar-height) - 40px);
   overflow-y: auto;
 }
 
